--- a/templates/add-goal.html
+++ b/templates/add-goal.html
@@ -81,7 +81,7 @@
       <div class="column-left form-group">
         <div class="form-group">
           <label for="start-date">Start Date</label>
-          <input type="text" class="form-control" id="start-date" placeholder="Enter Start Date Here">
+          <input class="form-control" id="start-date" name="start-date" placeholder="MM/DD/YYY" type="text"/>
         </div>
         <div class="column-left form-group">
           <label for="amount">Amount</label>
@@ -99,7 +99,7 @@
       <div class="column-right form-group">
         <div class="form-group">
           <label for="end-date">End Date</label>
-          <input type="text" class="form-control" id="end-date" placeholder="Enter End Date Here">
+          <input class="form-control" id="end-date" name="end-date" placeholder="MM/DD/YYY" type="text"/>
         </div>
         <br>
         <p>Repeat Goal every...</p>
@@ -150,3 +150,26 @@
 
 </body>
 </html>
+
+<!-- Include jQuery -->
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+
+<!-- Include Date Range Picker -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
+
+<script>
+    $(document).ready(function(){
+      var date_input=$('input[name="start-date"]'); //our date input has the name "date"
+      var date_input_two = $('input[name="end-date"]');
+      var container=$('.container').length>0 ? $('.container').parent() : "body";
+      var options={
+        format: 'mm/dd/yyyy',
+        container: container,
+        todayHighlight: true,
+        autoclose: true,
+      };
+      date_input.datepicker(options);
+      date_input_two.datepicker(options);
+    })
+</script>
