--- a/templates/add-goal.html
+++ b/templates/add-goal.html
@@ -31,11 +31,87 @@
     color: white;
   }
 
+  .btn-group {
+  text-align:center;
+   }
+
+ .btn-group input{
+  margin: 0 5px 0 30px;
+ }
+
   .center {
     display: flex;
     justify-content: center;
     align-items: center;
   }
+
+  .container_two {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  padding-right: 9px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 15px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.container_two input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  background-color: #eee;
+}
+
+/* On mouse-over, add a grey background color */
+.container_two:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.container_two input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.container_two input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.container_two .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
 
   </style>
 
@@ -104,34 +180,34 @@
         <br>
         <p>Repeat Goal every...</p>
         <div class="btn-group">
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="mon">
-            <label class="form-check-label" for="mon">Monday </label>
-          </div>
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="tues">
-            <label class="form-check-label" for="tues">Tuesday </label>
-          </div>
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="wed">
-            <label class="form-check-label" for="wed">Wednesday </label>
-          </div>
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="thurs">
-            <label class="form-check-label" for="thurs">Thursday </label>
-          </div>
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="fri">
-            <label class="form-check-label" for="fri">Friday </label>
-          </div>
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="sat">
-            <label class="form-check-label" for="sat">Saturday </label>
-          </div>
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="sun">
-            <label class="form-check-label" for="sun">Sunday </label>
-          </div>
+          <label class="container_two">Monday 
+            <input type="checkbox">
+            <span class="checkmark"></span>
+          </label>     
+          <label class="container_two">Tuesday
+            <input type="checkbox">
+            <span class="checkmark"></span>
+          </label>   
+          <label class="container_two"> Wednesday
+            <input type="checkbox">
+            <span class="checkmark"></span>
+          </label> 
+          <label class="container_two"> Thursday
+            <input type="checkbox">
+            <span class="checkmark"></span>
+          </label>   
+          <label class="container_two"> Friday
+            <input type="checkbox">
+            <span class="checkmark"></span>
+          </label> 
+          <label class="container_two"> Saturday
+            <input type="checkbox">
+            <span class="checkmark"></span>
+          </label> 
+          <label class="container_two"> Sunday
+            <input type="checkbox">
+            <span class="checkmark"></span>
+          </label> 
         </div>
       </div>
     </form>
